--- a/app/views/chat.ejs
+++ b/app/views/chat.ejs
@@ -116,7 +116,7 @@
 					{
 							apelido:$('#apelido').val(),
 							mensagem:$('#mensagem').val(),
-							apelido_atualizado_nos_clientes:$('#apelido_atualizado_nos_clientes'.val()
+							apelido_atualizado_nos_clientes:$('#apelido_atualizado_nos_clientes').val();
 					}
 				);
 				$('#mensagem').val("");
